Tue Sep 17 12:55:58 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/regexp.rdoc:  [DOC] Replace paragraphs in verbatim sections with
	  plain paragraphs to improve readability as ri and HTML.

Mon Sep 16 07:32:35 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: removed meaningless lines.
	* rational.c: ditto.

Mon Sep 16 00:44:23 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* ext/socket/mkconstants.rb: define MSG_FASTOPEN.
	  [ruby-core:57138] [Feature #8897]

Sun Sep 15 13:31:23 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_div): reverted r28844, r28886 and r28887.
	  REASON: Nobuyoshi Nakada  <nobu@ruby-lang.org>'s commits are buggy.
	  So Rational#/ may produce exact number with inexact number.
	  Moreover, without reducing.
	  REALLY NONSENSE COMMITS.
	  A bug report by me [ruby-dev:44710] is also caused by this behavior.
	  Kenta Murata  <mrkn@mrkn.jp> patched it up.
	  But he did not fix the origin.
	  Today, the bug is still alive in ruby 1.9.3 and 2.0.0.

Sat Sep 14 06:08:10 2013  Eric Hodel  <drbrain@segment7.net>

	* dir.c (dir_s_glob):  [DOC] Improve wording and layout.

	* dir.c (file_s_fnmatch):  ditto.

	* dir.c (Init_Dir):  [DOC] Document File::Constants::FNM_XXX
	  constants.  (These won't show up in RDoc until a new RDoc is
	  imported.)

Thu Sep 12 14:58:58 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic.find_proxy): return nil if
	  http_proxy environment variable is empty string.
	  [ruby-core:57140] [Bug #8898]

Fri Sep 13 10:40:28 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.1.3

	  Fixed installing platform gems

	  Restored concurrent requires

	  Fixed installing gems with extensions with --install-dir

	  Fixed `gem fetch -v` to install the latest version

	  Fixed installing gems with "./" in their files entries

	* test/rubygems/test_gem_package.rb:  Tests for the above.

	* NEWS:  Updated for RubyGems 2.1.3
